# SHARC

./: .cproject  .gitmodules  .mxproject  .project  CMakeLists.txt
CMake/: arm-none-eabi.cmake  mcu.cmake
Core/Inc/: GPS_Struct.h  SHARC_Frame.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Inc/HAL_Init/: ICM20649_init.h  SD_init.h  init.h
Core/Src/: SHARC_Frame.c  main.cpp  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Core/Src/HAL_Init/: ICM20649_init.c  INA2019_init.c  SD_init.c  init.c
CubeMX/: startup_stm32l4r5zitxp.s
Lib/: CMakeLists.txt
Modules/: CMakeLists.txt  current_lib.cmake  env_lib.cmake  fatfs_lib.cmake  imu_lib.cmake  sat_lib.cmake  sd_lib.cmake  stm32l4cube.cmake  wave_lib.cmake
Modules/ICM20649/Inc/: ICM20649.h
Modules/ICM20649/Src/: ICM2049.c
Modules/SD/Inc/: HAL_SD.h
Modules/SD/Src/: HAL_SD.c
